tests/NormalTests/paczka1/fuzzy1/35520547.err
Error in line 10: v6Pg8 A992 80,0
Error in line 23: Q1vbzejN A992 69,0
Error in line 26: Q1vbzejN S85 67,5
Error in line 32: Q1vbzejN A992 91,5
Error in line 35: lRIfyw A392 -1,1
Error in line 34: irVgGNoMgN S85 16,9
